Squashed commit of the following:
commit 7b16b63f5f269baa0441ee171d906419585d2526
Author: wunderwuzzi23 <johannr@wunderwuzzi.net>
Date:   Sat Mar 18 19:34:34 2023 -0700

    update text

commit d99b7ebf211a517d74fcf3241843e78a71e99d05
Author: wunderwuzzi23 <johannr@wunderwuzzi.net>
Date:   Sat Mar 18 19:31:28 2023 -0700

    fix formatting

commit 65b1f6218cc32f0a0001637b22b9f1b4640de983
Author: wunderwuzzi23 <johannr@wunderwuzzi.net>
Date:   Sat Mar 18 19:17:08 2023 -0700

    updating messages

commit 314071228395a595503dc3a15fda2b3c8b5e6095
Author: wunderwuzzi23 <johannr@wunderwuzzi.net>
Date:   Sat Mar 18 19:13:40 2023 -0700

    updating install.bat for yolo.yaml settings

commit 85c9f381415c86e7c95572bdcbd98d6478f616ef
Author: wunderwuzzi23 <johannr@wunderwuzzi.net>
Date:   Sat Mar 18 19:08:09 2023 -0700

    load yolo.yaml from executing directory

commit d9ee70035e186c8b21875d58e7a7bf3f980eaa60
Author: wunderwuzzi23 <johannr@wunderwuzzi.net>
Date:   Sat Mar 18 18:43:45 2023 -0700

    update readme

commit f2ae85827c675e3f2c87bf4d455709e227e1bfb4
Author: wunderwuzzi23 <johannr@wunderwuzzi.net>
Date:   Sat Mar 18 18:37:41 2023 -0700

    cleanup

commit fc5cf55982dd6de3a4e81de2b0286f18788bc87c
Author: wunderwuzzi23 <johannr@wunderwuzzi.net>
Date:   Sat Mar 18 18:31:00 2023 -0700

    fix formatting

commit 3ec4cf959cf4a43d061b0d579c863af5bb495631
Author: wunderwuzzi23 <johannr@wunderwuzzi.net>
Date:   Sat Mar 18 18:27:49 2023 -0700

    set safety: True in config

commit d13153141bbdb4ada5d9bf742b19fd9c10624c86
Author: wunderwuzzi23 <johannr@wunderwuzzi.net>
Date:   Sat Mar 18 18:25:07 2023 -0700

    update readme

commit 39f82ee8cf744ef6fbfbe6622e4d39cc6323d69a
Author: wunderwuzzi23 <johannr@wunderwuzzi.net>
Date:   Sat Mar 18 18:24:43 2023 -0700

    update readme

commit 944046c11bdcd3b01b33798dae5ca33e8ddda9db
Author: wunderwuzzi23 <johannr@wunderwuzzi.net>
Date:   Sat Mar 18 18:21:47 2023 -0700

    update requirements

commit 0c22313bdc6b3a9f272faf99b9

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 openai==0.27
 termcolor==2.2.0
-colorama
-python-dotenv
-distro
+colorama==0.4.4
+python-dotenv==1.0.0
+distro==1.7.0
+PyYAML==5.4.1
