make modify optional

--- a/yolo.yaml
+++ b/yolo.yaml
@@ -5,5 +5,8 @@ max_tokens: 500
 # Safety: If set to False, commands returned from the AI will be run *without* prompting the user.
 safety: True
 
+# Enable prompt modify feature
+modify: False
+
 # Open AI API Key (optional): The key can aso be provided via environment variable (OPENAI_API_KEY), .env, or ~/.openai.apikey file
 openai_api_key:
