--- a/yolo.yaml
+++ b/yolo.yaml
@@ -1,4 +1,4 @@
-model: gpt-3.5-turbo  # If you have access update to gpt-4 or gpt-4-turbo-preview
+model: gpt-4-turbo-preview  # If you have access update to gpt-4 or gpt-4-turbo-preview
 temperature: 0
 max_tokens: 500
 
@@ -7,6 +7,9 @@ safety: True
 
 # Enable prompt modify feature
 modify: False
+
+# Suggested Command Color
+suggested_command_color: blue
 
 # Open AI API Key (optional): The key can aso be provided via environment variable (OPENAI_API_KEY), .env, or ~/.openai.apikey file
 openai_api_key:
