--- a/yolo.yaml
+++ b/yolo.yaml
@@ -1,15 +1,21 @@
-model: gpt-4-turbo-preview  # If you have access update to gpt-4 or gpt-4-turbo-preview
+api: openai # Set to azure_openai if you want to use Azure OpenAI API          
+
+# If you have access update to gpt-4 or gpt-4-turbo-preview, if Azure this is the deployment name
+model: gpt-4-turbo-preview 
+
+# Azure specific (only needed if api: azure-openai)
+azure_endpoint: https://<name>.openai.azure.com
+azure_api_version: 2024-02-15-preview
+
+# Completion parameters
 temperature: 0
 max_tokens: 500
 
-# Safety: If set to False, commands returned from the AI will be run *without* prompting the user.
-safety: True
+safety: True # Safety: If set to False, commands returned from the AI will be run *without* prompting the user.
+modify: False # Enable prompt modify feature
+suggested_command_color: blue # Suggested Command Color
 
-# Enable prompt modify feature
-modify: False
-
-# Suggested Command Color
-suggested_command_color: blue
-
-# Open AI API Key (optional): The key can aso be provided via environment variable (OPENAI_API_KEY), .env, or ~/.openai.apikey file
+# API Keys (optional): The key can aso be provided via environment variable (OPENAI_API_KEY, AZURE_OPENAI_API_KEY), .env, or ~/.openai.apikey file
+azure_openai_api_key: 
 openai_api_key:
+
