--- a/yolo.aliyun.example.yaml
+++ b/yolo.aliyun.example.yaml
@@ -1,7 +1,8 @@
-api: openai # Set to azure_openai if you want to use Azure OpenAI API          
+api: tongyi # Set to azure_openai if you want to use Azure OpenAI API
 
 # If you have access update to gpt-4 or gpt-4-turbo-preview, if Azure this is the deployment name
-model: gpt-4-turbo-preview 
+model: 'qwen-plus'
+
 
 # Azure specific (only needed if api: azure-openai)
 azure_endpoint: https://<name>.openai.azure.com
